--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
     "start": "node index.js",
     "dev": "node --watch index.js"
   },
-  "keywords": ["hono", "a2a", "agent", "telex"],
-  "author": "Your Name",
+  "keywords": [
+    "hono",
+    "a2a",
+    "agent",
+    "telex"
+  ],
+  "author": "Nnanna Divine",
   "license": "MIT",
   "dependencies": {
     "@hono/node-server": "^1.12.0",
-    "hono": "^4.5.0",
+    "@mastra/core": "^0.24.0",
+    "@mastra/memory": "^0.15.11",
     "axios": "^1.7.7",
-    "dotenv": "^16.4.5"
+    "better-sqlite3": "^12.4.1",
+    "dotenv": "^16.4.5",
+    "hono": "^4.5.0",
+    "openai": "^6.8.1",
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": ">=18.0.0"
